tmp/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: insights
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - kibana.github.expert-services.io
      secretName: kibana-tls-secret
  rules:
    - host: kibana.github.expert-services.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
